View Issue Details

IDProjectCategoryView StatusLast Update
0033729Open CASCADEOCCT:Visualizationpublic2024-09-14 21:59
Reportervtryputs Assigned Tobugmaster  
PrioritynormalSeverityminor 
Status verifiedResolutionfixed 
PlatformLinuxOSUbuntu 20.04 
Fixed in Version7.9.0 
Summary0033729: Visualization - Fixed transparency for capping in 'Graphic3d_RTM_BLEND_OIT' mode
DescriptionIn provided configuration transparent objects can not be rendered
Steps To Reproduce- Draw several objects (transparent+transparent+opaque)
- Enable `Graphic3d_RTM_BLEND_OIT` for order independent rendering of transparent geometry
- Add to first object clipping plane with capping
TagsNo tags attached.
Test case numberNone

Attached Files

  • image.png (38,305 bytes)
  • image-2.png (22,690 bytes)

Activities

vtryputs

2024-05-30 13:23

developer  

image.png (38,305 bytes)
image-2.png (22,690 bytes)

git

2024-06-03 12:56

administrator   ~0115932

Branch CR33729 has been created by vtryputs.

SHA-1: dc1b402f7c1f04fae06160bb833bfd12fb72d341


Detailed log of new commits:

Author: Vitaut Tryputsin
Date: Thu May 30 13:26:24 2024 +0300

    0033729: Disappearing of transparent objects when enabled Graphic3d_RTM_BLEND_OIT and used clipping planes with capping
    
    Added changes connected with restoring of color mask (if we store and restore only rgb part, we can miss transparency)

dpasukhi

2024-06-03 14:30

administrator   ~0115934

@vtryputs please update summery of you commit message.

Needs to use "Visualization" and please compress the summary.

git

2024-06-03 15:06

administrator   ~0115935

Branch CR33729 has been updated forcibly by vtryputs.

SHA-1: 72ec0e23bd24207a4276e475e74d20800742c81f

git

2024-06-03 15:07

administrator   ~0115936

Branch CR33729 has been updated forcibly by vtryputs.

SHA-1: c1163c92310586e9da022a6a9097b39fc55d6433

vtryputs

2024-06-03 15:08

developer   ~0115937

@dpasukhi Fixed

dpasukhi

2024-06-03 15:20

administrator   ~0115938

@vtryputs awaiting for test system fixes. On our side.
After that will planned to integration.

git

2024-07-16 13:32

administrator   ~0116190

Branch CR33729_1 has been created by mzernova.

SHA-1: a3036c4729161a8aeeb46e67b692ad9f1219c3d7


Detailed log of new commits:

Author: Vitaut Tryputsin
Date: Thu May 30 13:26:24 2024 +0300

    0033729: Visualization - Fixed transparency for capping in 'Graphic3d_RTM_BLEND_OIT' mode
    
    Added changes connected with restoring of color mask (if we store and restore only rgb part, we can miss transparency)

mzernova

2024-07-16 16:08

developer   ~0116192

Please integrate
OCCT: CR33729_1

Tests:
http://jenkins-test-10.nnov.opencascade.com/view/CR33729-master-mzernova/view/ALL/

git

2024-09-14 21:59

administrator   ~0116650

Branch CR33729_1 has been deleted by dpasukhi.

SHA-1: a3036c4729161a8aeeb46e67b692ad9f1219c3d7

git

2024-09-14 21:59

administrator   ~0116651

Branch CR33729 has been deleted by dpasukhi.

SHA-1: c1163c92310586e9da022a6a9097b39fc55d6433

Issue History

Date Modified Username Field Change
2024-05-30 13:23 vtryputs New Issue
2024-05-30 13:23 vtryputs Assigned To => vtryputs
2024-05-30 13:23 vtryputs File Added: image.png
2024-05-30 13:23 vtryputs File Added: image-2.png
2024-05-31 11:08 dpasukhi Summary Disappearing of transparent objects when enabled Graphic3d_RTM_BLEND_OIT and used clipping planes with capping => Visualization - Disappearing of transparent objects when enabled Graphic3d_RTM_BLEND_OIT and used clipping planes with capping
2024-06-03 12:56 git Note Added: 0115932
2024-06-03 12:59 vtryputs Assigned To vtryputs => dpasukhi
2024-06-03 13:00 vtryputs Status new => resolved
2024-06-03 14:30 dpasukhi Note Added: 0115934
2024-06-03 15:06 git Note Added: 0115935
2024-06-03 15:07 git Note Added: 0115936
2024-06-03 15:08 vtryputs Note Added: 0115937
2024-06-03 15:18 dpasukhi Summary Visualization - Disappearing of transparent objects when enabled Graphic3d_RTM_BLEND_OIT and used clipping planes with capping => Visualization - Fixed transparency for capping in 'Graphic3d_RTM_BLEND_OIT' mode
2024-06-03 15:20 dpasukhi Note Added: 0115938
2024-07-16 13:32 git Note Added: 0116190
2024-07-16 16:08 mzernova Assigned To dpasukhi => bugmaster
2024-07-16 16:08 mzernova Status resolved => reviewed
2024-07-16 16:08 mzernova Note Added: 0116192
2024-07-22 12:39 dpasukhi Status reviewed => verified
2024-07-22 12:39 dpasukhi Resolution open => fixed
2024-07-22 12:39 dpasukhi Fixed in Version => 7.9.0
2024-07-22 12:39 dpasukhi Test case number => None
2024-09-14 21:59 git Note Added: 0116650
2024-09-14 21:59 git Note Added: 0116651