0033729: Visualization - Fixed transparency for capping in 'Graphic3d_RTM_BLEND_OIT' mode

Added changes connected with restoring of color mask (if we store and restore only rgb part, we can miss transparency)